--- a/TransUnion/Base.lproj/Main.storyboard
+++ b/TransUnion/Base.lproj/Main.storyboard
@@ -152,7 +152,7 @@
                                             <constraint firstAttribute="width" constant="90" id="cOd-50-m2w"/>
                                         </constraints>
                                     </webView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$9999999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Nz-24G">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$9999999" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Nz-24G">
                                         <rect key="frame" x="383" y="44" width="116" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="116" id="bf8-pP-MNL"/>
@@ -242,7 +242,7 @@
         <!--Final Results View Controller-->
         <scene sceneID="6e8-4w-sLj">
             <objects>
-                <viewController id="ZqL-sP-qnd" customClass="FinalResultsViewController" customModule="TransUnion" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="final" id="ZqL-sP-qnd" customClass="FinalResultsViewController" customModule="TransUnion" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mw8-yw-IO4"/>
                         <viewControllerLayoutGuide type="bottom" id="TgJ-zy-4WV"/>
